tdf#170189: XLS->XLSX empty font-name in export

<font> element in xl/styles.xml can't contaim empty "val" attribute
in its name

Change-Id: Ib476f23010a54f64cf90619f2712082785e4526a
Reviewed-on: https://gerrit.libreoffice.org/c/core/+/196387
Tested-by: Jenkins CollaboraOffice <jenkinscollaboraoffice@gmail.com>
Reviewed-by: Michael Stahl <michael.stahl@collabora.com>